--- a/honways.cabal
+++ b/honways.cabal
@@ -19,6 +19,7 @@ executable honways
   main-is:             Main.hs
   -- other-modules:
   -- other-extensions:
-  build-depends:       base >=4.12 && <4.13
+  build-depends:       base >=4.12 && <4.13,
+    matrix == 0.3.6.1
   hs-source-dirs:      src
   default-language:    Haskell2010
