--- a/honways.cabal
+++ b/honways.cabal
@@ -17,7 +17,10 @@ cabal-version:       >=1.10
 
 executable honways
   main-is:             Main.hs
-  -- other-modules:
+  other-modules:
+    Simulation.GameOfLife,
+    Input.Text,
+    Output.Text
   -- other-extensions:
   build-depends:       base >=4.12 && <4.13,
     matrix == 0.3.6.1
