Add function for writing a matrix to a file

--- a/honways.cabal
+++ b/honways.cabal
@@ -20,7 +20,8 @@ executable honways
   other-modules:
     Simulation.GameOfLife,
     Input.Text,
-    Output.Text
+    Output.Text,
+    Output.File
   -- other-extensions:
   build-depends:       base >=4.12 && <4.13,
     matrix == 0.3.6.1
