Move saving text files to Output.Text module
It will later on make more sense to group these IO modules in regard to
data types rather than type of output (console, file), e.g. handling
images and text files is much more different than handling console
output and text files.

--- a/honways.cabal
+++ b/honways.cabal
@@ -20,8 +20,7 @@ executable honways
   other-modules:
     Simulation.GameOfLife,
     Input.Text,
-    Output.Text,
-    Output.File
+    Output.Text
   -- other-extensions:
   build-depends:       base >=4.12 && <4.13,
     matrix == 0.3.6.1
